<resources>
    <string name="app_name">Logbook</string>
    <string name="backend_url">http://192.168.2.103:5000</string>
    <string name="new_trip">Neue Fahrt aufzeichnen</string>
    <string name="trip_finished">Fahrt abgeschlossen</string>
    <string name="trip_recording">Fahrt wird aufgezeichnet</string>
    <string name="license_plate">Kennzeichen</string>
    <string name="mileage">Kilometerstand</string>
    <string name="start">Start</string>
    <string name="error_generic">Es ist ein Fehler aufgetreten</string>
    <string name="error_invalid_credentials">Falsche Zugangsdaten</string>
    <string name="error_missing_input">Bitte alle Felder ausfüllen</string>
    <string name="error_permissions">Erlaubnis verweigert</string>
    <string name="error_vehicle_not_found">Fahrzeug nicht gefunden</string>
    <string name="login">Anmelden</string>
    <string name="departure_address">Abfahrtsort</string>
    <string name="arrival_address">Ankunftsort</string>
    <string name="duration">Dauer</string>
    <string name="distance_covered_km">Zurückgelegte Kilometer</string>
    <string name="cancel">Abbrechen</string>
    <string name="destination_reached">Ziel erreicht</string>
    <string name="end">Ende</string>
    <string name="insert">Eintragen</string>
    <string name="trip_created">Fahrt wurde eingetragen</string>
    <string name="dashboard">Dashboard</string>
    <string name="show_trips">Fahrten anzeigen</string>
    <string name="show_users">Benutzer anzeigen</string>
    <string name="show_vehicles">Fahrzeuge anzeigen</string>
    <string name="create_user">Benutzer erstellen</string>
    <string name="personnel_number">Personalnummer</string>
    <string name="password">Passwort</string>
    <string name="vehicle_comment_optional">Fahrzeugkommentar (optional)</string>
    <string name="trip_details">Fahrtdetails</string>
    <string name="street">Straße</string>
    <string name="house_number">Hausnummer</string>
    <string name="postal_code">Postleitzahl</string>
    <string name="locality">Ort</string>
    <string name="country">Land</string>
    <string name="driver">Fahrer</string>
    <string name="info">Info</string>
    <string name="trips">Fahrten</string>
    <string name="users">Benutzer</string>
    <string name="user_details">Benutzerdetails</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="role">Rolle</string>
    <string name="invoice">Abrechnung</string>
    <string name="maintenance">Wartung</string>
    <string name="delete">Löschen</string>
    <string name="deleted">Gelöscht</string>
    <string name="created">Erstellt</string>
    <string name="create">Erstellen</string>
    <string name="vehicles">Fahrzeuge</string>
    <string name="create_vehicle">Fahrzeug erstellen</string>
    <string name="vehicle_details">Fahrzeugdetails</string>
    <string name="manufacturer">Hersteller</string>
    <string name="model">Modell</string>
    <string name="comments">Kommentare</string>
</resources>